[package]
name = "wifi"
version = "0.1.0"
edition = "2021"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]

[dependencies]
anyhow = "1.0.75"
embedded-svc = "0.25.3"
esp-idf-hal = "0.41.2"
esp-idf-svc = { version = "0.46.2", features = ["experimental", "alloc"] }
esp-idf-sys = "0.33.2"
log = "0.4.20"

[build-dependencies]
anyhow = "1.0.75"
embuild = "0.31.2"

[dev-dependencies]
anyhow = "1.0.75"
esp-idf-sys = { version = "0.33.2", features = ["native", "binstart"] }
toml-cfg = "0.1.3"
